Fixed scrollbar flash on page load

--- a/app/globals.css
+++ b/app/globals.css
@@ -91,3 +91,13 @@
     color: transparent;
   }
 }
+
+@layer utilities {
+  .scrollbar-none {
+    scrollbar-width: none;
+  }
+
+  .scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
+}
